--- a/content/csnotes/cs202/index.org
+++ b/content/csnotes/cs202/index.org
@@ -2,7 +2,7 @@
 #+OPTIONS: tex: t
 #+STARTUP: latexpreview
 #+AUTHOR: Berkan Şahin
-#+DRAFT: true
+#+DRAFT: false
 #+DATE: 2022-03-22T08:50:00+03:00
 #+katex: true
 
@@ -12,8 +12,6 @@ go through the document (which can take a few days, since the document is approx
 counting heaps and AVL trees). I am posting these because they /might/ be useful to someone, but I give
 no guarantees on that regard.
 ** TODO List
-*** [ ]  use a font without ligatures for code listings
-*** [ ]  replace local slide links with links to the slides on the course webpage
 *** [ ]  find a way to typeset the LaTeX expressions
 
 * Study resources
@@ -23,7 +21,7 @@ These two sites contain problems that can help with the exams, interviews for jo
 [[https://leetcode.com][Leetcode]]
 
 * Algorithm Analysis
-[[file:../slides/1_analysis.pptx][Slideshow]]
+[[https://cs.bilkent.edu.tr/~adayanik/cs202/slides/L1_AlgorithmAnalysis.pptx][Slideshow]]
 ** C++ code examples (iterative)
 *** Time complexity : $O(n)$
 #+begin_src cpp
@@ -151,7 +149,7 @@ T(n) & = T(n/2^2) + \Theta(1) + \Theta(1) \\
      & = \Theta(\log{n})
 \end{align}
 * Searching and Sorting
-[[file:../slides/2_sorting.pptx][Slideshow]]
+[[file:https://cs.bilkent.edu.tr/~adayanik/cs202/slides/L2_Sorting.pptx][Slideshow]]
 ** Problem of the day
 True or false?
 1. $2n^2 + 1 = O(n^2)$ : True
@@ -535,7 +533,7 @@ T(n) & = 2T(n/2) + \Theta(n) \\
   - Algorithms like radix sort, counting sort etc. don't use comparisons
   - [[https://www.youtube.com/watch?v=_KhZ7F-jOlI][Why sorting algorithms w/ comparisons can't be faster than O(nlogn) (YouTube Video)]]
 * Trees
-[[file:../slides/trees.pptx][Slideshow]]
+[[https://cs.bilkent.edu.tr/~adayanik/cs202/slides/L3_Trees.pptx][Slideshow]]
 ** Definition of a tree
 - T is a tree if
   a. It has no nodes (leaf)
@@ -1118,7 +1116,7 @@ BSTNode* readTree(int n, std::istream& file) {
 #+end_src
 
 * Tables and Priority Queues
-[[file:../slides/heaps.pptx][slideshow]]
+[[https://cs.bilkent.edu.tr/~adayanik/cs202/slides/L4_Heaps.pptx][slideshow]]
 ** Tables
 - array or linked list implementations are called linear since the items come one after another
   - Unsorted array
