--- a/content/csnotes/dsa/sorting/index.org
+++ b/content/csnotes/dsa/sorting/index.org
@@ -1,72 +1,12 @@
 
-#+title: "Searching and Sorting"
+#+title: Sorting Algorithms
 #+date: 2022-03-23T12:15:48+03:00
-#+draft: true
+#+draft: false
 #+katex: true
 #+options: tex: t
 #+startup: latexpreview
 
-[[file:https://cs.bilkent.edu.tr/~adayanik/cs202/slides/L2_Sorting.pptx][Slideshow]]
-* Problem of the day
-True or false?
-1. $2n^2 + 1 = O(n^2)$ : True
-2. $\sqrt{n} = O(\log{n})$ : False
-   Because $\sqrt{n}$ grows faster than $\log{n}$
-3. $\log{n} = O(\sqrt{n})$ : True
-   Because $\sqrt{n}$ grows faster than $\log{n}$
-4. $n^2(1+\sqrt{n}) = O(n^2\log{n})$ : False
-   $n^2\sqrt{n}$ dominates the left hand side
-5. $3n^2 + \sqrt{n} = O(n^2)$ : True
-6. $\sqrt{n}\log{n} = O(n)$ : True
-   Replace $\log{n}$ w/ $O(\sqrt{n})$
-7. $\log{n} = O(n^{-1/2})$ : False
-   RHS is decreasing, so cannot be upper bound
-* Searching
-** Sequential Search
-#+begin_src cpp
-int sequentialSearch(const int a[], int item, int n){
-    int i;
-	for (i = 0; i < n && a[i] != item; i++);
-	if (i == n)
-		return –1;
-	return i;
-}
-#+end_src
-- Unsuccessful search :: $O(n)$
-- Successful search
-  - Best case :: Item is in the 1st location of the array
-    $O(1)$
-  - Worst case :: Item is in the last location of the array
-    $O(n)$
-  - Average case :: The number of key comparisons 1, 2, ..., n
-    (assuming uniform distribution)
-
-    \begin{equation*}
-    \frac{\sum_{i = 1}^{n} i}{n} = \frac{(n^2+n)/2}{n} => O(n)
-    \end{equation*}
-** Binary Search
-- We need to have the elements sorted in order to use bin. search
-#+begin_src cpp
-int binarySearch( int a[], int size, int x) {
-   int low =0;
-   int high = size –1;
-   int mid; 	  // mid will be the index of
-   		  	  // target when it’s found.
-   while (low <= high) {
- 	   mid = (low + high)/2;
-	   if (a[mid] < x)
-        low = mid + 1;
-	   else if (a[mid] > x)
-		   high  = mid – 1;
-     else
-		   return mid;
-   }
-   return –1;
-}
-#+end_src
-- Runs in $O(\log{n})$ time, since the problem size ~high - low~ is halved every iteration
-* Sorting
-** What is sorting
+* What is sorting
 - Organize data into ascending/descending order
 - Internal sort :: The data is always in the memory
   - *We will only analyze internal sort*
@@ -77,10 +17,9 @@ int binarySearch( int a[], int size, int x) {
 
 ** Efficiency of sorting
 - Using $O(n \log{n})$ algorithms leads to sub-quadratic algos
-  #+call: shot()
-
-  #+RESULTS:
-  [[file:./pics/220215-0916-30.png]]
+  
+  
+  [[file:./img/log_table.png]]
 
 ** Applications of Sorting
 - Closest pair :: Given n numbers, find the pair which are closest to each other
@@ -93,23 +32,18 @@ int binarySearch( int a[], int size, int x) {
 - find the largest item from unsorted part
 - swap w/ the element at the end of unsorted part
 - now the sorted part can grow by one
-#+call: shot()
+[[file:./img/selsort_visual.png]]
 
-#+RESULTS:
-[[file:./pics/220215-0939-01.png]]
-
-#+begin_src cpp
-typedef type-of-array-item DataType;
-
-void swap(DataType &a, DataType &b) {
-    DataType tmp = a;
-    a = b;
-    b = tmp;
+#+begin_src c
+void swap(int *a, int *b) {
+    int tmp = *a;
+    *a = *b;
+    *b = tmp;
 }
 
-int indexOfLargest(DataType arr[], int n) {
+int maxElem(int *arr, int size) {
     int maxIdx = 0; // Assume 1st elem is largest
-    for (int i = 1; i < n; i++) {
+    for (int i = 1; i < size; i++) {
         if (arr[i] > arr[maxIdx])
             maxIdx = i;
     }
@@ -117,16 +51,16 @@ int indexOfLargest(DataType arr[], int n) {
     return maxIdx;
 }
 
-void selectionSort( DataType theArray[], int n) {
-  for (int last = n-1; last >= 1; --last) {
-    int largest = indexOfLargest(theArray, last+1);
-    swap(theArray[largest], theArray[last]);
+void selectionSort(int arr, int size) {
+  for (int last = size - 1; last > 0; last--) {
+    int largest = indexOfLargest(theArray, last + 1);
+    swap(&arr[largest], &arr[last]);
   }
 }
 #+end_src
 
 **** Analysis
-- ~indexOfLargest~ runs in $O(last + 1)$ time for each iteration
+- ~maxElem~ runs in $O(last + 1)$ time for each iteration
 - ~swap~ runs in $O(1)$ time
 - Overall time complexity: $\sum_{i = 1}^n i = O(n^2)$
 - Total swaps: $n - 1$
@@ -138,28 +72,26 @@ void selectionSort( DataType theArray[], int n) {
 - List divided into sorted/unsorted
 - The first element of the unsorted part is inserted in place in the sorted sublist
 - At most $n - 1$ passes in a list of $n$ elements
-  #+call: shot()
-
-  #+RESULTS:
-  [[file:./pics/220215-0955-16.png]]
-
+[[file:./img/Insertionsort-before.png]]
+[[file:./img/Insertionsort-after.png]]
 **** Notes
 - Items are sorted in place
-- Incremental approach :: Useful for streams
+- An incremental approach, which is useful for data coming in streams
 
-**** C++ code
-#+begin_src cpp
-void insertionSort(DataType theArray[], int n) {
+**** C code
+#+begin_src c
+void insertionSort(int *arr, int n) {
 
-  for (int unsorted = 1; unsorted < n; ++unsorted) {
+  for (int boundary = 1; boundary < n; boundary++) {
 
-    DataType nextItem = theArray[unsorted];
-    int loc = unsorted;
+    int item = arr[boundary];
+    int targetIdx;
 
-    for (  ;(loc > 0) && (theArray[loc-1] > nextItem); --loc)
-       theArray[loc] = theArray[loc-1];
+    // Shift elements until the desired position is found
+    for (targetIdx = boundary; targetIdx > 0 && arr[targetIdx - 1] > item; targetIdx--)
+        arr[targetIdx] = arr[targetIdx - 1];
 
-    theArray[loc] = nextItem;
+    arr[targetIdx] = item;
   }
 }
 #+end_src
@@ -184,18 +116,20 @@ void insertionSort(DataType theArray[], int n) {
 - where k denotes the imaginary boundary between the sorted and the unsorted sublists
 - At each pass the largest element (in the unsorted portion) is moved to the end of the array, and k is decremented
 
-**** C++ code
-#+begin_src cpp
-void bubbleSort( DataType theArray[], int n) {
-   bool sorted = false;
+**** C code
+#+begin_src c
+void bubbleSort(int *arr, int n) {
+   char sorted = 0;
 
-	for (int pass = 1; (pass < n) && !sorted; ++pass) {
-      sorted = true;
-      for (int index = 0; index < n-pass; ++index) {
-         int nextIndex = index + 1;
-         if (theArray[index] > theArray[nextIndex]) {
-            swap(theArray[index], theArray[nextIndex]);
-            sorted = false; // signal exchange
+	for (int boundary = size; (boundary > 0) && !sorted; boundary--) {
+      sorted = 1;
+      for (int i = 0; i < boundary - 1; i++) {
+
+         if (arr[i] > arr[i + 1]) {
+            int tmp = arr[i];
+            arr[i] = arr[i + 1];
+            arr[i + 1] = tmp;
+            sorted = 0;
          }
       }
    }
@@ -226,11 +160,6 @@ void bubbleSort( DataType theArray[], int n) {
 2. Sort each half separately
 3. Merge the two halves into one sorted array
 
-#+call: shot()
-
-#+RESULTS:
-[[file:./pics/220217-1357-13.png]]
-
 **** Pseudocode
 #+begin_src python
 def merge_sort(Arr, begin, end):
@@ -253,61 +182,58 @@ def merge_sort(Arr, begin, end):
 - repeat until reaching the end of one of the arrays
 - If one of the arrays has remaining items, move them to the result array
 - Complexity :: $\Theta(n)$
-#+call: shot()
+**** C code
+#+begin_src c
+void merge(int *arr, int begin, int mid, int end) {
+    int left = begin;
+    int right = mid + 1;
+    int totalSize = (end - begin + 1) * sizeof(int);
+    int *tmpArr = (int*) malloc(totalSize);
+    int tmpIndex = 0;
 
-#+RESULTS:
-[[file:./pics/220217-1410-37.png]]
-**** C++ code
-#+begin_src cpp
-void mergesort( DataType theArray[], int first, int last) {
+    while ((left <= mid) && (right <= end)) {
+        if (arr[left] < arr[right]) {
+            tmpArr[tmpIndex] = arr[left];
+            left++;
+        } else {
+            tmpArr[tmpIndex] = arr[right];
+            right++;
+        }
 
-	if (first < last) {
+        tmpIndex++;
+    }
 
-      int mid = (first + last)/2; 	// index of midpoint
+    // Look for any leftovers
+    while (left <= mid) {
+        tmpArr[tmpIndex] = arr[left];
+        left++; tmpIndex++;
+    }
 
-      mergesort(theArray, first, mid);
+    while (right <= end) {
+        tmpArr[tmpIndex] = arr[right];
+        right++; tmpIndex++;
+    }
 
-      mergesort(theArray, mid+1, last);
+    // Move data back to the original array (memcpy is in string.h)
+    memcpy(&arr[begin], tmpArr, totalSize);
+    free(tmpArr);
 
-      // merge the two halves
-      merge(theArray, first, mid, last);
-   }
-}  // end mergesort
-#+end_src
-
-#+begin_src cpp
-void merge(DataType arr[], int first, int mid, int last) {
- 	DataType tempArray[MAX_SIZE]; 	// temporary array
-
-	 int first1 = first; 	// beginning of first subarray
-   int last1 = mid; 		// end of first subarray
-   int first2 = mid + 1;	// beginning of second subarray
-   int last2 = last;		// end of second subarray
-   int index = first1; // next available location in tempArray
-
-   for ( ; (first1 <= last1) && (first2 <= last2); ++index) {
-      if (theArray[first1] < theArray[first2]) {
-         tempArray[index] = theArray[first1];
-         ++first1;
-      }
-      else {
-          tempArray[index] = theArray[first2];
-          ++first2;
-      }
-   }
-    // finish off the first subarray, if necessary
-   for (; first1 <= last1; ++first1, ++index)
-      tempArray[index] = theArray[first1];
-
-   // finish off the second subarray, if necessary
-   for (; first2 <= last2; ++first2, ++index)
-      tempArray[index] = theArray[first2];
-
-   // copy the result back into the original array
-   for (index = first; index <= last; ++index)
-      theArray[index] = tempArray[index];
 }
+void mergeSort_r(int *arr, int begin, int end) {
+    if (begin < end) {
+        int mid = (begin + end) / 2;
+        mergeSort_r(arr, begin, mid);
+        mergeSort_r(arr, mid + 1, end);
+        merge(arr, begin, mid, end);
+    }
+}
+
+void mergeSort(int *arr, int n){
+    mergeSort_r(arr, 0, n - 1);
+}
+
 #+end_src
+
 **** Analysis
 ***** Merge
 - Complexity is always $O(n)$
@@ -343,16 +269,11 @@ T(n) & = 2T(n/2) + \Theta(n) \\
 2. Sort the arrays independently
 3. Combine (concatenate) the sorted parts
 **** Partitioning the array
-#+call: shot()
 1. Select a pivot element and place it into the 1st location
 2. 3 regions are considered during partitioning
    - $S_1$, where all elements are < pivot
    - $S_2$, where all elements are >= pivot
    - The unknown region, which contains elements not yet compared w/ pivot
-   #+call: shot()
-
-   #+RESULTS:
-   [[file:./pics/220217-1516-32.png]]
 
 3. Compare elements in unknown w/ the pivot
    - If element belongs in $S_2$, increment firstUnknown
@@ -361,13 +282,53 @@ T(n) & = 2T(n/2) + \Theta(n) \\
      2. increment both lastS1 and firstUnknown (since we know the item we swapped the unknown with is in $S_2$)
 
 4. Determine the index for the pivot and move it
-#+RESULTS:
-[[file:./pics/220217-1500-57.png]]
 
 5. Call quick sort on $S_1$ and $S_2$
    - Every element in $S_1$ is smaller than any element in $S_2$
    - that is, $a < b \forall (a, b) \in (S_1, S_2)$
-**** TODO C++ code
+**** TODO Code
+#+begin_src c
+// a naive implementation that always takes 1st element as pivot
+void qSort_r(int *arr, int begin, int end) {
+    if (begin < end) {
+        const int pivot = arr[begin];
+        int boundary = begin + 1;
+
+        /* Regions:
+         * begin: pivot
+         * begin + 1 to boundary - 1: elements smaller than pivot
+         * boundary to unkonwn - 1: elements >= pivot
+         * the rest of the array: elements not yet compared
+         */
+        for (int unknown = begin + 1; unknown <= end; unknown++) {
+            if (arr[unkonwn] < pivot) {
+
+                // Avoid unnecessary swap
+                if (boundary != unkown) {
+                    int tmp = arr[unkonwn];
+                    arr[unkonwn] = arr[boundary];
+                    arr[boundary] = tmp;
+                }
+
+                boundary++;
+            }
+        }
+
+        // Don't move pivot if all elements are >= pivot
+        if (boundary - 1 != begin) {
+            arr[begin] = arr[boundary - 1];
+            arr[boundary - 1] = pivot;
+        }
+
+        qSort_r(arr, begin, boundary - 2); // Don't include pivot
+        qSort_r(arr, boundary, end);
+    }
+}
+
+void quickSort(int *arr, int size) {
+    qSort_r(arr, 0, size - 1);
+}
+#+end_src
 **** Analysis
 ***** Worst case
 - When the 1st element is selected as the pivot and the list is already sorted
